# thesis_Bunker

./: .cursorrules  .gitignore  AI研究アシスタント用スクリプト.md  A_STAR_TERRAIN_COST_INVESTIGATION.md  BENCHMARK_RESULTS_TERRAIN_AWARE.md  Bunkerプロジェクト概要.md  COMPARISON_4METHODS_96SCENARIOS.md  COMPARISON_TA_VS_FIELDD_HYBRID.md  COMPREHENSIVE_96SCENARIO_REPORT.md  DATASET3_ANALYSIS.md  DATASET3_STRUCTURE_REPORT.md  DATA_CONSISTENCY_REPORT.md  FIELD_DSTAR_HYBRID_INVESTIGATION.md  FINAL_CLEANUP.md  IMPLEMENTATION_EXECUTIVE_SUMMARY.md  INTEGRATION_STATUS.md  PHASE1_AHA_INVESTIGATION_REPORT.md  PRACTICAL_FEASIBILITY_ANALYSIS.md  PRELIMINARY_EXPERIMENTS_REPORT.md  PROJECT_HANDOVER_TA_STAR_UNITY.md  README.md  TA_STAR_REPORT.md  TA_STAR_ROOT_CAUSE_ANALYSIS.md  TA_STAR_UNITY_SETUP.md  THESIS_EVALUATION.md  THESIS_WRITING_COMPLETION_REPORT.md  add_fieldd_to_96_combined.py  aha_param_test_results.json  analyze_dataset3_terrain.py  combine_results_for_5methods.py  create_abstract_figures.py  dataset3_design_rationale.json  dataset3_extreme_design_rationale.json  dataset3_extreme_design_summary.json  dataset3_extreme_parameters.json  dataset3_matrix_design.json  dataset3_robot_spec_parameters.json  debug_aha_detailed.py  debug_aha_step_by_step.py  debug_terrain_cost.py  (+38 more)
ros2/ros2_ws/src/bunker_ros2/: CMakeLists.txt  README.md  check_research_completion.py  diagnose_tastar_problem.py  extract_paper_data.py  fix_all_errors.sh  generate_final_summary.py  package.xml  run_preflight_check.py  run_research_enhancement.py  run_ultimate_research.sh  run_ultimate_research_final.sh  run_world_class_research.py  setup.py  test_optimized_realistic.py  verify_fixes.sh
ros2/ros2_ws/src/bunker_ros2/analysis/: __init__.py  advanced_metrics.py  advanced_metrics_simple.py  error_analysis.py  error_analysis_simple.py  failure_analysis.py  failure_analyzer.py  latex_generator.py  novelty_analysis.py  parameter_sensitivity.py  results_dashboard.py  statistical_analyzer.py  statistical_tests.py  statistical_tests_simple.py  theoretical_proof.py  visualizer.py
ros2/ros2_ws/src/bunker_ros2/benchmarks/: create_benchmark_dataset.py  realtime_benchmark.py
ros2/ros2_ws/src/bunker_ros2/bunker_3d_nav/: CMakeLists.txt  package.xml  setup.py
ros2/ros2_ws/src/bunker_ros2/config/: planner_params.yaml  terrain_params.yaml
ros2/ros2_ws/src/bunker_ros2/docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md
ros2/ros2_ws/src/bunker_ros2/examples/: simple_planning.py
ros2/ros2_ws/src/bunker_ros2/experiments/: ablation_study.py  base_experiment.py  parameter_sensitivity.py  terrain_experiment.py  test_adaptive_tastar.py
ros2/ros2_ws/src/bunker_ros2/launch/: terrain_analyzer.launch.py
ros2/ros2_ws/src/bunker_ros2/msg/: TerrainInfo.msg  VoxelGrid3D.msg
ros2/ros2_ws/src/bunker_ros2/path_planner_3d/: README.md  __init__.py  astar_planner_3d.py  edge_case_test.py  node_3d.py  performance_test.py  quick_test.sh  run_all_tests.sh  test_cost_calculator.py  test_node_3d.py
ros2/ros2_ws/src/bunker_ros2/reports/: phase2_complete_report.md
ros2/ros2_ws/src/bunker_ros2/resource/: bunker_3d_nav
ros2/ros2_ws/src/bunker_ros2/results/: efficient_terrain_results.json  extreme_scenario_results.json  further_optimizations.md  phase4_scalability_results.json  representative_terrain_results.json  scalability_results.json  simple_scalability_results.json  statistical_analysis_simple.json  tastar_bottleneck_analysis.md  terrain_test_terrain_20251024_222245.json
ros2/ros2_ws/src/bunker_ros2/ros_integration/: path_planner_node.py
ros2/ros2_ws/src/bunker_ros2/simulation_manager/: algorithm_comparison.py  analyze_failures.py  analyze_failures_detailed.py  auto_run_remaining_phases.sh  bidirectional_lazy_tastar.py  check_experiment_status.py  check_phase2_health.sh  check_phase2_progress.sh  compare_algorithms.py  complexity_analysis.py  comprehensive_lazy_analysis.py  data_collector.py  debug_astar_api.py  enhanced_progress_monitor.sh  experiment_monitor.py  extreme_scenario_test.py  final_analysis.py  fix_extreme_hazards_terrain.py  generate_comparison_and_dijkstra_stats.py  generate_presentation_plots.py  lazy_tastar.py  lazy_tastar_wrapper.py  paper_data_collection.py  path_visualizer.py  quick_algorithm_test.py  report_generator.py  representative_terrain_generator.py  representative_terrain_tester.py  run_algorithm_comparison.py  run_dijkstra_dwa_experiment.py  run_dijkstra_dwa_experiment_v2.py  run_dijkstra_dwa_experiment_v3.py  run_dijkstra_dwa_med_large.py  run_dijkstra_dwa_small30.py  run_efficient_terrain_experiment.py  run_full_simulation.sh  run_phase3_tastar_superiority.py  run_phase4_scalability.py  run_phase5_visualization.py  run_representative_terrain_experiment.py  (+13 more)
ros2/ros2_ws/src/bunker_ros2/terrain_analyzer/: README.md  __init__.py  slope_calculator.py  terrain_analyzer_node.py  test_slope_calculator.py  test_voxel_processor.py  voxel_grid_processor.py
ros2/ros2_ws/src/bunker_ros2/test/: conftest.py  run_test_cost_function.sh  test_astar_3d.py  test_cost_function.py  test_integration.py  test_slope_calculator.py  test_voxel_grid_processor.py
ros2/ros2_ws/src/bunker_ros2/test_data/: generate_sample_pointcloud.py  sample_scenarios.yaml
ros2/ros2_ws/src/bunker_ros2/tests/: __init__.py  test_experiments.py  test_planners.py
ros2/ros2_ws/src/bunker_ros2/unity_bridge/: test_unity_bridge.py
ros2/ros2_ws/src/bunker_ros2/utils/: __init__.py  file_manager.py  logger.py  timer.py
ros2/ros2_ws/src/bunker_unity/: CMakeLists.txt  package.xml
ros2/ros2_ws/src/bunker_unity/config/: bunker_control.yaml  paths.yaml
ros2/ros2_ws/src/bunker_unity/launch/: bunker_desciption.launch.py  controllers.launch.py  launcher.launch.py  spawn_bunker.launch.py
ros2/ros2_ws/src/bunker_unity/rviz/: unity_sim.rviz
ros2/ros2_ws/src/bunker_unity/src/: stamped_vel_pub.cpp
ros2/ros2_ws/src/bunker_unity/urdf/: backup_wheels.xml  bunker.ros2_control.xacro  bunker.urdf.xacro  bunker_macro.urdf.xacro  bunker_wheels.xacro  emlid_gnss.xacro  (+4 more)
ros2/ros2_ws/src/path_planner_3d/: README.md  package.xml  rrt_star_patch_note.md  setup.py
(+1447 files in other folders)
