<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unity_ros2_scripts</name>
  <version>0.0.0</version>
  <description>TODO</description>
  <maintainer email="todo@todo.com">Masaaki Hijikata</maintainer>
  <license>TODO</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_python</build_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
